tests/pass/array_literal_basic.lum
__emit([], true, false)
__emit([1, 2, 3], true, false)
