tests/fail/array_set_out_of_bounds.lum
nums = [1, 2, 3]
nums[3] = 5
